# graph-ufs

./: .gitignore  .gitmodules  README.md  evaluate-baselines-spectra.sh  evaluate-baselines.sh  evaluate-gdm.sh  evaluate-graphcast.sh  evaluate-graphufs.sh  evaluate-long-forecast.sh  evaluate-pangu.sh  pyproject.toml
conda/: README.md  cpu-workaround.yaml  cpu.yaml  gpu-workaround.yaml  gpu.yaml  perlmutter-gpu.yaml
graphufs/: __init__.py  batchloader.py  clipping.py  coupledemulator.py  dataset.py  datasets.py  diagnostics.py  emulator.py  evaluation.py  fvemulator.py  fvstatistics.py  gefs.py  inference.py  lineplot.py  log.py  mpi.py  optim.py  plotstyle.mplstyle  postprocess.py  progress.py  replay_vertical_levels.yaml  spatialmap.py  stacked_deviation_training.py  stacked_diagnostics.py  stacked_mpi_training.py  stacked_parallel_training.py  stacked_training.py  statistics.py  tensorflow.py  tensorstore.py  torch.py  training.py  utils.py
modulus-prototypes/p0/: config.yaml  train_graphcast.py
prototypes/cp0/: README.md  calc_normalization.py  data_visualization.ipynb  mini_coupled_emulator.py  plot_loss.ipynb  stacked_train.py  train.py
prototypes/gdmv1/: config.py  inference.py  inference_clipped.py  postprocess.py
prototypes/gefs/: calc_statistics.py  config.py  inference.py  plot_loss_blowup.ipynb  postprocess_inference.py  tester.ipynb  train.py
prototypes/grad-clip-test/: config.py  train.py
prototypes/latent-size-test/: .gitignore  config.py  configeval.py  train.py  (+12 more)
scripts/: forecast_fv_member.py  forecast_member.py  forecast_member_remote.py
(+260 files in other folders)
